--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>{{ title }}</title>
-        <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+        <link rel="stylesheet" href="/static/pico.min.css">
     </head>
     <body>
         <main class="container">
@@ -11,7 +11,7 @@
             {% if instructions != "" %}
             <p>{{ instructions }}</p>
             {% endif %}
-            <form action="/v1/{{ table }}" method="post">
+            <form action="/{{ table }}" method="post">
                 <div>
                     {% for field in fields %}
                     <label for name="{{ field.name }}">
